Complete CSS assignment

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,5 @@
 <h1>About Bloccit</h1>
 <p>Created by: Flo</p>
+
+
+<p><%= link_to "My Facebook Page", "https://www.facebook.com/fleung2", class: "social-btn" %></p>
