--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
         <li><%= link_to "About", about_path %></li>
 
           <div class="pull-right user-info">
+
+          <div class="pufll-right user-info">
+
             <% if current_user %>
               Hello <%= current_user.email %>! <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
             <% else %>
