--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,13 +1,11 @@
 @import "bootstrap";
 
-  .user-info {
+.user-info {
+  padding-top: 15px;
+}
 
-    margin-top: 9px;
-
-  }
-
-  .nav {
-    margin-top: 5px;
-  }
+.nav {
+  margin-top: 5px;
+}
 
 @import "welcome";
