Complete uploading images assignment

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,11 +4,11 @@
   <div class="col-md-8">
 
        <small>
-         <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avator? %>
+         <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
          submitted <%= time_ago_in_words(@post.created_at) %> ago by
          <%= @post.user.name %>
        </small>
-
+    <p><%= image_tag(@post.image.halfsize.url) if @post.image? %></p>
     <p><%= markdown_to_html @post.body %></p>
   </div>
 
