Completed Pagninatioin point

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,7 @@
   <div class="col-md-8">
 
        <small>
-         <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avator? %>
+         <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
          submitted <%= time_ago_in_words(@post.created_at) %> ago by
          <%= @post.user.name %>
        </small>
