--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,6 @@
-<h1><%= markdown_to_html @post.title %></h1>
+<h1>
+  <%= markdown_to_html @post.title %>
+</h1>
 
 <div class="row">
   <div class="col-md-8">
@@ -11,7 +13,6 @@
 
     <p><%= markdown_to_html @post.body %></p>
   </div>
-
  <div class="col-md-4">
   <% if policy(@post).edit? %>
     <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
@@ -19,4 +20,13 @@
  </div>
 </div>
 
+</br>
+
+<div class="row">
+  <h2>Comments</h2>
+  <div class='col-md-12'>
+    <%= render @comments %>
+    <%= render 'comments/form', topic: @topic, comment: @comment, post: @post %>
+  </div>
+</div>
 
