--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,12 +1,21 @@
+// "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
+//  Need to run $RAILS_ENV=production bin/rake assets:precompile, after changing 
+@import "bootstrap-sprockets";
 @import "bootstrap";
 
 .user-info {
-  padding-top: 15px;
+  padding-top: 9px;
 }
 
 .nav {
   margin-top: 5px;
 }
 
+.vote-arrows {
+   width: 40px;
+   text-align: center;
+}
+
 
 @import "welcome";
+
