--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
-//  Need to run $RAILS_ENV=production bin/rake assets:precompile, after changing 
+//  Need to run $RAILS_ENV=production bundle exec rake assets:precompile
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
