--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
-//  Need to run $RAILS_ENV=production bundle exec rake assets:precompile
+//  Need to run $ RAILS_ENV=production bundle exec rake assets:precompile
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
@@ -12,10 +12,13 @@
 }
 
 .vote-arrows {
-   width: 40px;
-   text-align: center;
+  width: 40px;
+  text-align: center;
 }
 
+.favorite {
+  margin-top: 20px;
+}
 
 @import "welcome";
 
