--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -7,10 +7,8 @@
 <div class="row">
   <div class="col-md-8">
     <p class="lead"><%= @topic.description %></p>
-
-    <% render @posts %>
+    <%= render @posts %>
     <%= will_paginate @posts %>
-
   </div>
   <div class="col-md-4">
     <% if policy(Post.new).create? %>
