--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
   <li><%= link_to "Topics", topics_path %></li>
   <li><%= link_to "Popular", posts_path %></li>
   <li><%= link_to "Users", users_path %></li>
+  <li><%= link_to "Sponsor Lists", advertisements_path %></li>
 
    <div class="pull-right user-info">
    <% if current_user %>
